<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ray_tracing_plugin</name>
  <version>0.0.1</version>
  <description>ray tracing plugin</description>
  <maintainer email="juanscelyg@gmail.com">Juan S. Cely G.</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>ros_gz_bridge</buildtool_depend>
  <buildtool_depend>ros_gz_sim</buildtool_depend>
  <buildtool_depend>gz_plugin_vendor</buildtool_depend>
  <buildtool_depend>gz_sim_vendor</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
